# C24_4_2024-1_G1C_LearnAI-Backend

./: Dockerfile
lai-django/: .env.example  pyproject.toml
lai-django/ai/: authentication.py  urls.py  views.py
lai-django/core/: settings.py  urls.py
lai-django/dashboard/: urls.py  views.py
lai-express/: .env.example  package-lock.json  package.json  server.js
lai-spring/: .env.example
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_domain/: UserDTO.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_entity/: ExportedLog.java  Theme.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_exception/: DuplicatedUserInfoException.java  UserNotFoundException.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_repository/: ExportedLogRepository.java  ThemeRepository.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_rest/: AuthController.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_runner/: DatabaseInitializer.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_security/: CustomUserDetailsService.java  ErrorAttributesConfig.java
lai-spring/src/main/java/pe/edu/tecsup/learnai/paq_services/: UserService.java
lai-spring/src/main/resources/: application.yml
spring/: .env.example  env_setup  pom.xml
spring/src/main/java/pe/edu/tecsup/learnai/: LearnAiApplication.java
spring/src/main/java/pe/edu/tecsup/learnai/domain/: UserDTO.java
spring/src/main/resources/: application.yml
spring/src/main/resources/templates/: TemplateEmail.html  TemplateEmailResetPassword.html
(+77 files in other folders)
